--- a/.github/workflows/clang-format-check.yml
+++ b/.github/workflows/clang-format-check.yml
@@ -3,6 +3,8 @@ name: C Coding Style Check
 # Runs on pushes to pull request
 on: pull_request
 
+permissions: {}
+
 jobs:
   clang-format-style-check:
     name: C Coding Style Check (clang-format check)
