--- a/.cproject
+++ b/.cproject
@@ -162,7 +162,7 @@
 									<listOptionValue builtIn="false" value="../src/rocketlib"/>
 									<listOptionValue builtIn="false" value="../third_party/canlib"/>
 								</option>
-								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols.1287074211" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols" valueType="definedSymbols">
+								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols.1287074211" name="Define symbols (-D)" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.assembler.option.definedsymbols" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="BOARD_INST_UNIQUE_ID=BOARD_INST_ID_ROCKET"/>
 									<listOptionValue builtIn="false" value="BOARD_TYPE_UNIQUE_ID=BOARD_TYPE_ID_ALTIMETER"/>
 								</option>
@@ -193,7 +193,6 @@
 									<listOptionValue builtIn="false" value="../src"/>
 									<listOptionValue builtIn="false" value="../third_party/canlib"/>
 									<listOptionValue builtIn="false" value="../third_party/rocketlib/include"/>
-									<listOptionValue builtIn="false" value="../src/rocketlib"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.1403946487" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
@@ -220,8 +219,8 @@
 									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F"/>
 									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FatFs/src"/>
 									<listOptionValue builtIn="false" value="../src"/>
-									<listOptionValue builtIn="false" value="../src/rocketlib"/>
 									<listOptionValue builtIn="false" value="../third_party/canlib"/>
+									<listOptionValue builtIn="false" value="../third_party/rocketlib/include"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp.475945130" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.cpp.compiler.input.cpp"/>
 							</tool>
